--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 @media {
   :root,
   .t-IErMA {
+    background-color: #7CB9E8;
     --fonts-title: Acid Grotesk, sans-serif;
     --fonts-base: Inter, sans-serif;
     --fonts-kicker: Inter, sans-serif;
